--- a/src/main/resources/templates/user/header.html
+++ b/src/main/resources/templates/user/header.html
@@ -58,12 +58,12 @@
                                aria-haspopup="true"
                                aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a>
+                                <li class="nav-item"><a class="nav-link" href="category">Shop Category</a></li>
+                                <li class="nav-item"><a class="nav-link" href="product">Product Details</a>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>
-                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
-                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>
+                                <li class="nav-item"><a class="nav-link" href="checkout">Product Checkout</a></li>
+                                <li class="nav-item"><a class="nav-link" href="cart">Shopping Cart</a></li>
+                                <li class="nav-item"><a class="nav-link" href="confirmation">Confirmation</a></li>
                             </ul>
                         </li>
                         <li class="nav-item submenu dropdown">
